--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "framer-motion": "^12.19.1",
+    "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.10",
     "toastr": "^2.1.4"
