--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
