--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
@@ -23,6 +26,7 @@
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "toastr": "^2.1.4"
   },
@@ -35,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5"
   }
 }
