--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
