--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,16 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-flatpickr": "^4.0.11",
     "react-icons": "^5.5.0",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "shadcn": "^2.7.0",
