--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "flowbite-react": "^0.11.8",
     "radix-ui": "^1.4.2",
     "zod": "^3.25.67"
