--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
@@ -20,7 +21,7 @@
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
-    "flowbite-react": "^0.11.8",
+    "flowbite-react": "^0.12.5",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
@@ -33,7 +34,7 @@
     "shadcn": "^2.7.0",
     "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "toastr": "^2.1.4",
     "zod": "^3.25.67"
   },
