--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "toastr": "^2.1.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.67"
   },
   "devDependencies": {
