--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,8 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+SANCTUM_EXPIRATION=60
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
