--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
@@ -31,7 +32,7 @@
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "shadcn": "^2.7.0",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.22.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "toastr": "^2.1.4",
