♻️refactor: Credenciais de admin na .env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
 # Sempre que atualizar, rode um php artisan config:clear
+APP_NAME="Processos Seletivos Gerais - UAB"
+
 FRONTEND_URL=http://localhost:5173/
 
 APP_NAME=Laravel
@@ -10,9 +12,14 @@ APP_URL=http://localhost
 
 SANCTUM_EXPIRATION=60
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_ADMIN_NAME='Admin'
+APP_ADMIN_EMAIL='#####@####.##'
+APP_ADMIN_CPF='###########'
+APP_ADMIN_PASSWORD='#####################'
+
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
