♻️refactor: Multi Select e Tabs do PrimeReact na Preview da Chamada

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
+    "primereact": "^10.9.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-flatpickr": "^4.0.11",
