🐛fix: pequenas correções, remoções, e configurações para usuários, permissões, schemas e funções úteis

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,7 @@ APP_URL=http://localhost
 
 SANCTUM_EXPIRATION=60
 
+APP_ADMIN_UUID="0a0a0a0a-0a0a-0a0a-0a0a-0a0a0a0a0a0a"
 APP_ADMIN_NAME='Admin'
 APP_ADMIN_EMAIL='#####@####.##'
 APP_ADMIN_CPF='###########'
