--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.5",
