🚧in progress: CRUD de editais e configuração de datas, além de visualização

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,7 +10,8 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-SANCTUM_EXPIRATION=60
+SANCTUM_EXPIRATION=120
+SESSION_LIFETIME=1440
 
 APP_ADMIN_UUID="0a0a0a0a-0a0a-0a0a-0a0a-0a0a0a0a0a0a"
 APP_ADMIN_NAME='Admin'
@@ -32,7 +33,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
@@ -40,7 +41,6 @@ DB_CONNECTION=sqlite
 # DB_PASSWORD=
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
